# waydroid-xr-stubs

./: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  README.md
android/: layer_exports.map  openxr_layer_manifest.json
host/: BUILD_VERIFICATION.md  CMakeLists.txt  GPU_INTEGRATION.md  README.md
host/src/: dma_buf_import.c  dma_buf_import.h  gpu_sync.c  gpu_sync.h  graphics_binding.c  graphics_binding.h  ipc_server.c  ipc_server.h  openxr_host.c  openxr_host.h  waydroid_xr_server.c
host/test/: test_gpu_integration.c
include/openxr/: meta_ext_stubs.h
scripts/: build_host_server.sh  build_ndk.sh
src/: ipc_bridge.c  ipc_bridge.h  layer_main.c  meta_ext_stubs.c
